@@ -7,6 +7,7 @@ Changes in HARP-0.6.0:
 - Add scripted/scriptable managment interface.
 - Improved FLAC playback.
 - Allowing resampling for JACK.
+- Partial 24 bit audio support.
 
 Changes in HARP-0.5.3:
 - Changed shuffle function to avoid predictable results.
